--- a/app/stylesheets/app.css
+++ b/app/stylesheets/app.css
@@ -29,8 +29,8 @@ h1, h2 {
 }
 
 h2 {
-  color: #AAA;
-  font-size: 32px;
+  color: #000;
+  font-size: 28px;
 }
 
 h3 {
@@ -45,4 +45,8 @@ h3 {
 
 #balance {
   color: black;
+}
+
+td{
+  border: #AAAAAA solid 1px;
 }
